tests/semantic/invalid/argument_errors/test2.src
// Invalid: wrong argument type
fn greet(int count) -> int {
    return count;
}

fn main() -> int {
    int x = greet(true);
    return x;
}
